# app/Http/Controllers/Api/Auth/RegisterController.php
@@ -51,13 +51,6 @@ class RegisterController extends Controller
      *         required=true,
      *         @OA\Schema(type="string", format = "password")
      *     ),
-     *     @OA\Parameter(
-     *         name="deviceName",
-     *         in="query",
-     *         description="User's device name",
-     *         required=false,
-     *         @OA\Schema(type="string")
-     *     ),
      *     @OA\Response(response="201", description="User registered successfully", @OA\JsonContent()),
      *     @OA\Response(response="422", description="Validation errors", @OA\JsonContent())
      * )
